# hypersync-client-node

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  cargotree  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml  build-docker-images.yaml  publish_to_npm.yaml
__test__/: decoder.test.mjs  index.spec.mjs
docker/: alpine.Dockerfile  debian-aarch64.Dockerfile  debian.Dockerfile
docs/: README.md  index.html  modules.html  modules.md
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: CallDecoder.html  CallDecoder.md  Decoder.html  Decoder.md  EventStream.html  EventStream.md  EventsStream.html  HeightStream.html  HypersyncClient.html  HypersyncClient.md  QueryResponseStream.html  QueryResponseStream.md
docs/enums/: BlockField.html  BlockField.md  DataType.html  DataType.md  HexOutput.html  HexOutput.md  JoinMode.html  JoinMode.md  LogField.html  LogField.md  TraceField.html  TraceField.md  TransactionField.html  TransactionField.md
docs/functions/: presetQueryBlocksAndTransactionHashes.html  presetQueryBlocksAndTransactions.html  presetQueryLogs.html  presetQueryLogsOfEvent.html
docs/interfaces/: AccessList.html  AccessList.md  Authorization.html  Authorization.md  AuthorizationSelection.html  AuthorizationSelection.md  Block.html  Block.md  BlockFilter.html  BlockSelection.html  BlockSelection.md  ClientConfig.html  ClientConfig.md  ColumnMapping.html  ColumnMapping.md  Config.html  Config.md  DecodedEvent.html  DecodedEvent.md  DecodedSolValue.html  DecodedSolValue.md  Event.html  Event.md  EventResponse.html  EventResponse.md  Events.html  Events.md  FieldSelection.html  FieldSelection.md  HeightStreamConnectedEvent.html  HeightStreamHeightEvent.html  HeightStreamReconnectingEvent.html  Log.html  Log.md  LogFilter.html  LogSelection.html  LogSelection.md  ParquetConfig.html  Query.html  Query.md  (+22 more)
docs/types/: BlockField.html  ConnectedTag.html  DataType.html  HeightStreamEvent.html  HeightTag.html  HexOutput.html  LogField.html  ReconnectingTag.html  SerializationFormat.html  TraceField.html  TransactionField.html
examples/all-erc20/: README.md  package.json  (+2 more)
src/: config.rs  decode.rs  decode_call.rs  from_arrow.rs  from_arrow_starknet.rs  lib.rs  preset_query.rs  query.rs  starknet_types.rs  types.rs
starknet_project/: out.json  package.json  pnpm-lock.yaml  tsconfig.json
(+67 files in other folders)
