[package]
edition = "2021"
name = "envio_hypersync-client"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = [
  "napi9",
  "async",
  "serde-json",
] }
napi-derive = "2"
arrow2 = { version = "0.18" }
prefix-hex = "0.7.1"
arrayvec = "0.7"
serde = { version = "1", features = ["derive"] }
alloy-json-abi = "0.6"
alloy-dyn-abi = "0.6"
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0.11"

anyhow = "1"

serde_json = "1"

skar-client = "0.16"
skar-net-types = "0.2"
skar-format = "0.2"
faster-hex = "0.9.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
