[package]
edition = "2021"
name = "envio_hypersync-client"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.patch]
crates = ["skar-client"]

[patch.crates-io] 
skar-client = { path="./patch/skar-client-0.16.3" }

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = [
  "napi9",
  "async",
  "serde-json",
  "error_anyhow",
] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
alloy-dyn-abi = "0.7"
tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0.11"
faster-hex = "0.9.0"
anyhow = "1"
serde_json = "1"
ruint = "1"

hypersync-client = "0.6"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
